# esphome-unifi-chime

./: .gitignore  LICENSE  README.md  chime_example.yaml  unifi_protect_device_protocol.md
components/unifi_chime/: CMakeLists.txt  __init__.py  adoption.cpp  adoption.h  binary_sensor.py  binme.cpp  binme.h  discovery.cpp  discovery.h  factory_certs.h  idf_component.yml  ucp4.cpp  ucp4.h  unifi_chime.cpp  unifi_chime.h
components/unifi_chime/certs/: factory_key.pem
external_components/unifi_chime/: __init__.py  factory_certs.cpp  ucp4.h  unifi_chime.cpp  unifi_chime.h
external_components/unifi_chime/certs/: factory_ca.pem
